# indico

./: .babelrc  .browserslistrc  .coveragerc  .dprint.jsonc  .editorconfig  .eslintignore  .eslintrc.yml  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .header.yaml  .isort.cfg  .prettierignore  .prettierrc  .prettierrc.yml  .readthedocs.yml  .sass-lint.yml  .stylelintrc.yaml  .travis.yml  .watchmanconfig  AUTHORS  CHANGES.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  INSTALL  LICENSE  MANIFEST.in  Makefile  NEWS  README  README.md  README.rst  SECURITY.md  Sardorbek.md  THANKS  THANKS.md  (+41 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug-report---.md  config.yml  feature-request---.md  support-question---.md
.github/matchers/: flake8-problem-matcher.json  headers-problem-matcher.json  react-jsx-i18n-problem-matcher.json  stylelint-problem-matcher.json
.github/utils/: check_version.py  extract_changelog.py  patch_moment_locales.py
.github/workflows/: build.yml  ci.yml  claude-code-review.yml  codeql-analysis.yml  labeler.yml  pypi.yml  translations.yml  zizmor.yml
.tx/: config
__mocks__/: axios.js  indico-url.js  react.js
contrib/http_api/: buildurl.php  buildurl.py
contrib/indicoAuth/: build.xml
doc/: migration.txt  requirements.txt
doc/api/: Makefile  make.bat
doc/dev/: Makefile
doc/docbook_src/: INSTALL.xml  contmgr.xml  distribution.xml  faq.xml  glossary.xml  guidedocbook  guidedocbook.xml  protection_system.xml  sessioncoord.xml  sessionmanage.xml  sessionmanageart.xml  submitter.xml  trackco.xml
doc/guides/: Makefile  conf.py  index.rst  make.bat
doc/toWiki/: HOWTO_BACKUP  HOWTO_BACKUP_CERN  MAINTENANCE_CERN  UPGRADE_INDICO_PRODUCTION_CERN  development_practices.txt  distribution
docs/: Makefile  requirements.in  requirements.txt
docs/source/: conf.py  exec_directive.py  index.rst  indico_uml_directive.py
etc/: __init__.py  config.xml  config.xsd  confmerge.py  indico.conf  indico.conf.sample  logging.conf.sample  zdctl.conf  zdctl.conf.sample  zodb.conf.sample
etc/js/: indico.cfg  instantmessaging.cfg  jquery.cfg  jsbuild.sh  livesync.cfg  presentation.cfg
indico/: __init__.py  global.d.ts  indico.conf.sample  logging.conf.sample  logging.yaml.sample  moment_locales.yaml
indico/MaKaC/: __init__.py  abstractReviewing.py  accessControl.py  badge.py  badgeDesignConf.py  booking.py  conference.py  contributionReviewing.py  domain.py  epayment.py  errors.py  eticket.py  evaluation.py  externUsers.py  fileRepository.py  i18n.py  negotiations.py  paperReviewing.py  participant.py  poster.py  posterDesignConf.py  rb_customAttributesManager.py  rb_dalManager.py  rb_equipmentManager.py  rb_factory.py  rb_location.py  rb_reservation.py  rb_room.py  rb_tools.py  registration.py  review.py  reviewing.py  roomMapping.py  schedule.py  statistics.py  task.py  trashCan.py  user.py  webcast.py
indico/cli/: admin.py  cleanup.py  core.py  database.py  devserver.py  event.py  filter_po_files.py  i18n.py  maintenance.py  manage.py  python_upgrader.py  server.py  setup.py  shell.py  user.py  util.py  watchfiles.py  watchman.py  webpack.py
indico/core/: __init__.py  auth.py  auth_test.py  cache.py  cache_test.py  config.py  config_test.py  emails.py  emails_test.py  errors.py  limiter.py  logger.py  logging.py  marshmallow.py  notifications.py  permissions.py  plugins.py  roles.py  sentry.py  signals.py  storage.py  storage_test.py  webpack.py
indico/ext/: __init__.py  register.py
indico/htdocs/: EMail.py  JSContent.py  SubContributionDataModification.py  SubContributionWriteMinutes.py  __init__.py  about.py  abstractDisplay.py  abstractManagment.py  abstractModify.py  abstractReviewing.py  abstractSubmission.py  abstractTools.py  abstractWithdraw.py  abstractsManagment.py  adminAnnouncement.py  adminCollaboration.py  adminConferenceStyles.py  adminLayout.py  adminList.py  adminLocal.py  adminMaintenance.py  adminPlugins.py  adminProtection.py  adminServices.py  adminStyles.py  adminSystem.py  adminTemplates.py  adminUpcomingEvents.py  assignContributions.py  badgeTemplates.py  calendarSelect.py  categOverview.py  categoryAC.py  categoryConfCreationControl.py  categoryCreation.py  categoryDataModification.py  categoryDisplay.py  categoryFiles.py  categoryMap.py  categoryModification.py  (+183 more)
indico/legacy/: accessControl.py  errors.py
indico/locale/: messages-js.pot  messages.pot
indico/migrations/: alembic.ini  env.py  script.py.mako
indico/modules/: __init__.py  base.py  (+4 more)
indico_zodbimport/: __init__.py  cli.py  util.py  zodb_objects.py
indicop/: BaseTest.py  Indicop.py  __init__.py  tests.conf.sample  util.py
migrations/: alembic.ini  env.py  script.py.mako
resolver/: eslint-import-resolver.js  package.json
scripts/: README.txt  TZMigration.py  absolute2relative.py  changeStyle.py  chdatetime.py  check_conflict_description_content.py  cleanupWebSessions.py  compressJS.py  contribTypeConverter.py  createOAIConferenceCache.py  createOAIContributionCache.py  createSocialEventObjects.py  exhumeEventLinks.py  fixRoleLinks.py  fixWrongImportedAgendaUsers.py  getAllCatManagers.py  getNotMainResourcePapers.py  inheritanceGraph.py  mapfinal.py  markMainResources.py  migrateContribs.py  pendingsMigration.py  rebuildAuthorIndex.py  rectifySubContArchiveHierarchy.py  removeIC.py  resetDisplayMgrs.py  restore_meeting.py  sendCommitteesEmail.py  sendEmail2PA&Submitters.py  sendEmail2SubmittersUsingTPL.py  sendEmailLastDatePapers.py  sendSeminarsEmail.py  sendSeminarsEmailJacques.py  sendVCSurveyMail.py  setCategConfNum.py  setSubmissionPrivileges.py  startDB.py  startTaskDaemon.py  syncContribCounters.py  syncFromAbstractToContribs.py  (+3 more)
tests/: Indicop.py  __init__.py  runst  test.py  testCFA.py  testCategories.py  testConfMerge.py  testConferences.py  testContributions.py  testFileSubmission.py  testSchedule.py  testSciProgramme.py  testSessions.py  testSetupPy.py  testWebInterface.py  tests.conf.sample
webpack/: base.babel.js  base.js  base.mjs  index.js
(+10056 files in other folders)
