[metadata]
name = indico
version = attr: indico.__version__
description = Indico is a full-featured conference lifecycle management and meeting/lecture scheduling tool
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://getindico.io
license = MIT
author = Indico Team
author_email = indico-team@cern.ch
classifiers =
    Environment :: Web Environment
    Framework :: Flask
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9

project_urls =
    Blog = https://getindico.io/blog/
    Community = https://talk.getindico.io/
    Changelog = https://docs.getindico.io/en/stable/changelog/
    Releases = https://github.com/indico/indico/releases
    Issues = https://github.com/indico/indico/issues
    GitHub = https://github.com/indico/indico

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = ~=3.9

[options.packages.find]
include = indico, indico.*

[options.entry_points]
console_scripts =
    indico = indico.cli.core:cli
celery.commands =
    unlock = indico.core.celery.cli:UnlockCommand
pytest11 =
    indico = indico.testing.pytest_plugin



[compile_catalog]
directory = indico/translations

[pep257]
ignore = D100,D203,D105,D213

[pycodestyle]
exclude = .git,build,dist,ext_modules,node_modules,indico.egg-info,__pycache__,docs,htmlcov
max-line-length = 120
